--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-is-visible": "^1.1.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "sass": "^1.40.1",
     "web-vitals": "^1.1.2"
   },
