--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "intersection-observer": "^0.12.0",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-is-visible": "^1.1.2",
     "react-redux": "^7.2.5",
