--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.0.5",
     "multer": "^1.4.3",
     "sharp": "^0.29.1",
+    "socket.io": "^4.2.0",
     "stream": "0.0.2"
   },
   "devDependencies": {
