--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "sass": "^1.40.1",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
