--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.4",
     "intersection-observer": "^0.12.0",
     "js-cookie": "^3.0.1",
+    "mock-local-storage": "^1.1.19",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
