--- a/backend/package.json
+++ b/backend/package.json
@@ -20,13 +20,15 @@
     "multer": "^1.4.3",
     "sharp": "^0.29.1",
     "socket.io": "^4.2.0",
-    "stream": "0.0.2"
+    "stream": "0.0.2",
+    "nodemon": "^2.0.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
   },
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js",
+    "herokuStart": "node server.js"
   },
   "keywords": [],
   "author": "",
