--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "dayjs": "^1.10.7",
     "intersection-observer": "^0.12.0",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "mock-local-storage": "^1.1.19",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
