--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,10 @@
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.5",
     "multer": "^1.4.3",
+    "nodemon": "^2.0.12",
     "sharp": "^0.29.1",
     "socket.io": "^4.2.0",
-    "stream": "0.0.2",
-    "nodemon": "^2.0.12"
+    "stream": "0.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
